--- a/src/client/style.scss
+++ b/src/client/style.scss
@@ -13,6 +13,7 @@ label {
     line-height: 2;
 }
 
-.register-content {
-    border-left: 1px solid black;
+/* ====== SIGN IN - LOGIN ====== */
+.border-left {
+    border-left: 1px solid grey;
 }
