--- a/src/client/style.scss
+++ b/src/client/style.scss
@@ -18,8 +18,11 @@ label {
     border-left: 1px solid grey;
 }
 
+.button {
+    background: linear-gradient(to left, #7eb27c, #2fb5bd);
+    width: 35%;
+}
+
 /*.minimum-height {
     height: min-content;
   }*/
-
-  
