--- a/src/client/style.scss
+++ b/src/client/style.scss
@@ -27,3 +27,8 @@ p {
     width: 100%;
     height: 100vh;
 }
+
+.leaflet-tile-pane {
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+}
