--- a/src/client/style.scss
+++ b/src/client/style.scss
@@ -33,6 +33,10 @@ p {
 
  .border-right{border-right:1px solid grey;}   
 
+ .level .is-mobile .level-item {
+    margin: 0.2rem!important;
+  }
+
 // -------- Leaflet Map Integration --------
 .leaflet-container {
     width: 100%;
