--- a/src/client/style.scss
+++ b/src/client/style.scss
@@ -52,12 +52,12 @@ label {
 
 /* Customize the Clustered Markers */
 .marker-cluster-custom {
-    background-image: url('./assets/map-icon/tree10.svg');
+    background-image: url('./assets/map-icon/cluster_multi.svg');
     color: black;
-    height: 69px;
+    height: 46px;
     line-height: 37px;
     text-align: center;
-    width: 47px;
+    width: 50px;
 }
 
 /* ====== SIGN IN - LOGIN ====== */
