remove class to TreeIcon

--- a/src/client/style.scss
+++ b/src/client/style.scss
@@ -62,7 +62,7 @@ right:0;}
 
 /* Customize the Clustered Markers */
 .marker-cluster-custom {
-    background-image: url('./assets/map-icon/cluster_multi.svg');
+    background-image: url('./assets/map-icon/cluster_multi.png');
     color: black;
     height: 46px;
     line-height: 37px;
