--- a/src/client/style.scss
+++ b/src/client/style.scss
@@ -1,7 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import '~leaflet/dist/leaflet.css';
-
-
+@import "~leaflet/dist/leaflet.css";
 
 h1,
 h2,
@@ -16,38 +14,47 @@ label {
     line-height: 2;
 }
 
-.button {border:1px solid rgb(158, 158, 158);}
+.button {
+    border: 1px solid rgb(158, 158, 158);
+}
 
 /* ====== SIDEBAR ====== */
 
 .profilepic {
-    & img {border-radius:50%;
-    border:1px solid grey;}
-    & h4 {font-weight:bold;
-    & span {
-        display: inline-block;
-    }}}
-
- .border-right{border-right:1px solid rgb(194, 194, 194);}   
-
- .mobileUtils {position:absolute;
-z-index:3000;
-right:0;}
-
-.mobileTreeInfo {position:absolute;
-    z-index:3000;
-    width:100vw;
-    bottom:-60px;
-    padding:2rem;
-
+    & img {
+        border-radius: 50%;
+        border: 1px solid grey;
+    }
+    & h4 {
+        font-weight: bold;
+        & span {
+            display: inline-block;
+        }
+    }
 }
 
+.border-right {
+    border-right: 1px solid rgb(194, 194, 194);
+}
 
- .is-transparent {
-    background-color: transparent!important;
+.mobileUtils {
+    position: absolute;
+    z-index: 3000;
+    right: 0;
+}
+
+.mobileTreeInfo {
+    position: absolute;
+    z-index: 3000;
+    width: 100vw;
+    bottom: -60px;
+    padding: 2rem;
+}
+
+.is-transparent {
+    background-color: transparent !important;
     background-image: none;
-    }
-
+}
 
 // -------- Leaflet Map Integration --------
 .leaflet-container {
@@ -62,7 +69,7 @@ right:0;}
 
 /* Customize the Clustered Markers */
 .marker-cluster-custom {
-    background-image: url('./assets/map-icon/cluster_multi.png');
+    background-image: url("./assets/map-icon/cluster_multi.png");
     color: white;
     font-weight: bold;
     font-size: 1.1rem;
@@ -78,11 +85,7 @@ right:0;}
 }
 
 .btn {
-    color:white!important;
+    color: white !important;
     background: linear-gradient(to left, #7eb27c, #2fb5bd);
     width: 35%;
 }
-
-/*.minimum-height {
-    height: min-content;
-  }*/
